# stryke-grpc

./: Cargo.toml  Makefile  README.md  build.rs  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: call_unary.stk  describe_service.stk  discover.stk  list_services.stk  reflect.stk
lib/: Grpc.stk
proto/: reflection.proto
src/: codec.rs  common.rs  lib.rs  main.rs  reflection.rs
t/: test_grpc.stk  test_stryke_grpc_surface.stk
tests/: contract_cli_round4.rs
