[package]
name = "stryke-grpc-helper"
version = "0.1.1"
edition = "2021"
description = "Reflection-based generic gRPC client for the stryke `grpc` package."
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-grpc"
publish = false

[[bin]]
name = "stryke-grpc-helper"
path = "src/main.rs"

[build-dependencies]
tonic-prost-build = "0.14"

[dependencies]
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "channel", "tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs", "time", "sync"] }
tokio-stream = "0.1"
clap = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context", "env",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
bytes = "1"
http = "1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
