[package]
name = "stryke-grpc"
version = "0.12.0"
edition = "2021"
description = "Reflection-based generic gRPC client cdylib for stryke. Dlopened in-process with a persistent tonic channel + descriptor pool cache per endpoint"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-grpc"
homepage = "https://menketechnologies.github.io/stryke-grpc/"
publish = false

[lib]
name = "stryke_grpc"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
tonic-prost-build = "0.14"

[dependencies]
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "channel", "tls-ring", "tls-native-roots", "gzip", "zstd", "deflate"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "fs", "time", "sync"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
bytes = "1"
http = "1"
futures-util = "0.3"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
